fluxcd/apps/overlays/production/fairer-pages/httproute-cell-membrane-1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fairer-pages-cell-membrane-1
  namespace: tingle-tuner
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  parentRefs:
    - name: cell-membrane-gateway
      namespace: hyrule-castle
  hostnames:
    # Note: 16 hostnames max should be assigned to each "httproute-<name>-<#>.yaml"

    # ipleek.com
    - "ipleek.com"
    - "www.ipleek.com"
    - "*.ipleek.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /fairer-pages/
      backendRefs:
        - name: fairer-pages
          port: 8023
